# Py3AMF

./: .gitignore  .travis.yml  CHANGES.txt  MANIFEST.in  README.md  README.rst  ROADMAP.md  pyproject.toml  requirements.txt  setup.py  setupinfo.py  test-requirements.txt
.github/workflows/: tests.yml
cpyamf/: amf3.pyx  util.pyx
doc/: about.rst  bugs.rst  conf.py  install.rst
doc/architecture/: adapters.rst  attributecontrol.rst  classmapping.rst  future.rst  overview.rst  typemap.rst
doc/community/: download.rst  irc.rst  mailinglist.rst  maintainers.rst  team.rst
doc/html/: tutorials.html
doc/tutorials/: index.rst
doc/tutorials/actionscript/: index.rst
doc/tutorials/apache/: index.rst
doc/tutorials/examples/apache/: mod_python.py  mod_wsgi.py
doc/tutorials/examples/gateways/appengine/: client.py
doc/tutorials/examples/gateways/cherrypy/: client.py
doc/tutorials/examples/gateways/turbogears/: mygateway.py
doc/tutorials/examples/gateways/twisted/: client.py  wsgi.py
doc/tutorials/examples/gateways/werkzeug/: client.py
doc/tutorials/examples/general/client/: authentication.py  basic.py  exception.py  headers.py  logger.py  referer.py  user_agent.py
pyamf/tests/: __init__.py  test_suite.py
pyamf/util/: imports.py  pure.py
src/cpyamf/: amf0.pxd  amf0.pyx  amf3.pyx  codec.pyx
src/pyamf/: __init__.py
src/pyamf/util/: imports.py
