[build-system]
requires = [
    "setuptools>=81.0.0",
    "wheel>=0.46.0",
    "Cython>=3.1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "Py3AMF"
version = "0.8.11"
description = "AMF support for Python"
readme = "README.rst"
requires-python = ">=3.12"
authors = [
    { name = "The Py3AMF Project", email = "yhbu@stdc.so" }
]
license = { text = "MIT License" }
keywords = [
    "python3", "amf", "amf0", "amf3", "flex", "flash", "remoting", "rpc",
    "http", "flashplayer", "air", "bytearray", "objectproxy", "arraycollection",
    "recordset", "actionscript", "decoder", "encoder", "gateway", "remoteobject",
    "twisted", "pylons", "django", "sharedobject", "lso", "sol"
]
classifiers = [
    "Framework :: Django",
    "Framework :: Pylons",
    "Framework :: Twisted",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "defusedxml",
]

[project.urls]
Homepage = "https://github.com/StdCarrot/Py3AMF"

[project.optional-dependencies]
twisted = ["Twisted>=16.0.0"]
django = ["Django>=0.96"]
sqlalchemy = ["SQLAlchemy>=0.4"]
elixir = ["Elixir>=0.7.1"]
lxml = ["lxml>=4.4.0"]
six = ["six>=1.10.0"]
