[build-system]
requires = [
    "setuptools>=81.0.0",
    "wheel>=0.46.0",
    "Cython>=3.1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "Py3AMF"
version = "0.8.11"
description = "AMF support for Python"
readme = "README.rst"
requires-python = ">=3.12"
authors = [
    { name = "The Py3AMF Project", email = "yhbu@stdc.so" }
]
license = { text = "MIT License" }
keywords = [
    "python3", "amf", "amf0", "amf3", "flex", "flash", "remoting", "rpc",
    "http", "flashplayer", "air", "bytearray", "objectproxy", "arraycollection",
    "recordset", "actionscript", "decoder", "encoder", "gateway", "remoteobject",
    "twisted", "pylons", "django", "sharedobject", "lso", "sol"
]
classifiers = [
    "Framework :: Django",
    "Framework :: Pylons",
    "Framework :: Twisted",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "defusedxml",
]

[project.urls]
Homepage = "https://github.com/StdCarrot/Py3AMF"

[project.optional-dependencies]
twisted = ["Twisted>=16.0.0"]
django = ["Django>=0.96"]
sqlalchemy = ["SQLAlchemy>=0.4"]
elixir = ["Elixir>=0.7.1"]
lxml = ["lxml>=4.4.0"]
six = ["six>=1.10.0"]
test = ["pytest"]



[tool.epydoc]
# The documented project's name.
name = "PyAMF API Documentation"
# The documented project's URL.
url = "http://pyamf.org/"
# The list of objects to document.
modules = "pyamf"
# Don't examine in any way the modules whose dotted name match this
# regular expression pattern.
exclude = "tests*"
# The "top" page for the documentation. Can be a URL, the name
# of a module or class, or one of the special names "trees.html",
# "indices.html", or "help.html"
top = "pyamf"
# The type of output that should be generated. Should be one
# of: html, text, latex, dvi, ps, pdf.
output = "html"
# The path to the output directory.  May be relative or absolute.
target = "doc/build/api"
# If True, don't try to use colors or cursor control when doing
# textual output. The default False assumes a rich text prompt.
simple-term = 0
# An integer indicating how verbose epydoc should be.  The default
# value is 0; negative values will supress warnings and errors;
# positive values will give more verbose output.
verbosity = 0
# Whether or not to list each module's imports.
imports = true
# Whether or not to include syntax highlighted source code in
# the output (HTML only).
sourcecode = true

[tool.flake8]
exclude = ["doc", ".ropeproject"]
ignore = ["E402"]
